apps/zabbix/zabbix-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server
  template:
    metadata:
      labels:
        app: zabbix-server
    spec:
      containers:
        - name: zabbix-server
          image: zabbix/zabbix-server-pgsql:alpine-7.0-latest
          ports:
            - containerPort: 10051
          readinessProbe:
            tcpSocket:
              port: 10051
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 10051
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6

---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: zabbix
spec:
  type: NodePort
  selector:
    app: zabbix-server
  ports:
    - name: zabbix-server
      port: 10051
      targetPort: 10051
      nodePort: 30051
      protocol: TCP
