apps/zabbix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix
  namespace: zabbix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik

  rules:
    - host: zabbix.onlionel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-web
                port:
                  number: 80

  tls:
    - hosts:
        - zabbix.onlionel.com
